--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-
-
 img{
     width: 400px;
     height: 300px;
 }
 
 p{
-    font-family: ;
-    font-size: ;
-    color: ;
+    font-family: Dancing Script;
+    font-size: 20px;
+    color: black (gray);
 }
+
+
