--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@ img{
 p{
     font-family: Dancing Script;
     font-size: 20px;
-    color: black (gray);
+    color: 
 }
 
+h3{
+    color:black (gray)
+}
 
