--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
+
+
 img{
     width: 400px;
     height: 300px;
 }
 
 p{
-    font-family: Dancing Script;
-    font-size: 20px;
+    font-family: Dancing Scrip;
+    font-size: #ca1a49;  
     color: 
 }
-
-h3{
-    color:#b40d39
-}
-
