--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
 img{
     width: 400px;
     height: 300px;
@@ -9,4 +8,9 @@ p{
     font-family: Dancing Scrip;
     font-size: #ca1a49;  
     color: 
+}
+
+h3{
+    #b40d39
+
 }
