--- a/style.css
+++ b/style.css
@@ -1,16 +1,30 @@
+h1{
+    color:#b668a0 ;
+}
+
+h3{
+   color: #b668a0;
+}
 
 img{
     width: 400px;
     height: 300px;
 }
 
-p{
-    font-family: Dancing Scrip;
-    font-size: #ca1a49;  
-    color: 
+
+h2{
+ color: #b668a0;   
 }
 
-h3{
-    #b40d39
+img{
+    border: solid 2px   ;
+}
 
+h2{
+    color: #b668a0; 
+}
+
+p{
+    font-family: ;
+    color: #b668a0;
 }
