--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 h1{
-    color:#b668a0 ;
+    color:#942070 ;
 }
 
 h3{
-   color: #b668a0;
+   color: #942070;
 }
 
 img{
@@ -13,8 +13,7 @@ img{
 
 
 h2{
- color: #b668a0;   
-}
+ color:#942070;
 
 img{
     border: solid 2px   ;
