--- a/style.css
+++ b/style.css
@@ -24,6 +24,6 @@ h2{
 }
 
 p{
-    font-family: Dancing Script;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #b668a0;
 }
